--- a/style.css
+++ b/style.css
@@ -97,3 +97,24 @@ button{
 button:hover{
     background-color: var(--Deep-aquamarine);
 }
+
+
+@media (min-width: 768px) {
+    figure{
+        display: flex;
+        flex-direction: row;
+        min-width: 600px;
+        min-height: 450px;
+    }
+
+    picture #p-img {
+        width: 333px;
+        min-height: 100%;
+        object-fit: cover;
+    }
+
+    figure .product-dec {
+        width: 50%;
+        margin-top: 0.5em;
+    }
+}
